Provide orderly shutdown for managed Tomcat process